--- a/js/src/sasha_lukin_0/sasha_lukin_0.html
+++ b/js/src/sasha_lukin_0/sasha_lukin_0.html
@@ -6,11 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0">
-	<title>calc</title>
+	<title>sasha_lukin_0</title>
 </head>
 
 <body>
-	calc
+	<a href="https://www.youtube.com/watch?v=v5Y4vQ824cI"
+		target='_blank'>
+		sasha_lukin_0
+	</a>
 </body>
 
 </html>
